@@ -1,6 +1,8 @@
 20110929
  - (djm) [configure.ac defines.h] No need to detect sizeof(char); patch
    from des AT des.no
+ - (dtucker) [configure.ac openbsd-compat/Makefile.in
+   openbsd-compat/strnlen.c] Add strnlen to the compat library.
 
 20110923
  - (djm) [openbsd-compat/getcwd.c] Remove OpenBSD rcsid marker since we no
